--- a/.github/workflows/test-required-workflow.yml
+++ b/.github/workflows/test-required-workflow.yml
@@ -1,29 +1,12 @@
 # Org横断でworkflowを必須にできるかを試すためのworkflowです
 # 試し終わったら消します
-name: Test Workflow
+name: Hello World
 
-on:
-  push:
-    branches: [main, master]
-  pull_request:
-    branches: [main, master]
-  workflow_dispatch:
+on: pull_request
 
 jobs:
-  test:
+  build:
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-
     steps:
-      - name: Checkout code
-        uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
-
-      - name: Run test
-        run: echo "Test workflow is running successfully!"
-
-      - name: Display system information
-        run: |
-          echo "Operating System: $(uname -s)"
-          echo "Kernel Version: $(uname -r)"
-          echo "Architecture: $(uname -m)"
+    - name: Hello World
+      run: echo "Hello World!"
